tests/semantic/invalid/undeclared_variable/use.src
fn test() -> int {
    x = 5;
    return x;
}
